--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "node": "^24.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
